frontend/test/should_fail/graphof_missing_declaration_in_model_exec.grg
#using "graphof_fail_model.gm"

rule r() {
	n:N -e:E-> n;

	modify {
	---
		exec( { { graphof(n) != graphof(e) } } );
	}
}
